# gleaner

./: LICENSE  README.md  pyproject.toml
gleaner/: cli.py  helpers.py  scraper.py
