[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gleaner"
license = "MIT"
description = "Web scraper that finds all pages on a domain"
readme = "README.md"
dependencies = [
    "requests",
    "beautifulsoup4",
    "tqdm",
]
dynamic = ["version"]
authors = [
    {name = "Wolter van der Hoef", email = "woltervanderhoef@gmail.com"},
]
requires-python = ">=3.8"
keywords = ["web-scraping", "crawler", "sitemap", "domain-mapping", "cli"]
classifiers = [
   "Development Status :: 4 - Beta",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
   "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/wohoef/gleaner"

[project.scripts]
glean = "gleaner.cli:main"

[tool.setuptools.dynamic]
version = {attr = "gleaner.__version__"}